==> STMicroelectronics/STM32CubeWB0/Projects/NUCLEO-WB07CC/Applications/BLE/BLE_TransparentMode_UART_for_Updater/STM32_BLE/App/transport_layer.c <==
#include "stm32wb0x.h"
#include "fifo.h"
#include "compiler.h"
#include "transport_layer.h"
#include "dtm_cmd_db.h"
#include "stm32wb0x_ll_usart.h"
#include "stm32wb0x_hal_dma.h"
#include "stm32wb0x_hal_uart.h"
#include "hci_parser.h"
#include "dtm_preprocess_events.h"
#include "app_common.h"
#define MAX_EVENT_SIZE  (536)
#define COMMAND_BUFFER_SIZE  (536 + 4)
#define EVENT_BUFFER_SIZE    2300
#define COMMAND_BUFFER_SIZE  265        /* Decrease buffer size for reducing RAM footprint */
#define EVENT_BUFFER_SIZE    1024
#define FIFO_ALIGNMENT       4
#define FIFO_VAR_LEN_ITEM_MAX_SIZE (MAX_EVENT_SIZE)
#define DMA_CH_UART_TX          LL_DMA_CHANNEL_1
#define DMA_CH_UART_RX          LL_DMA_CHANNEL_2
#define HCI_RESET_OPCODE        0x0C03
#define LEGACY_ADV_OPCODE_LOW  0x2006 // Lowest opcode for legacy advertising commands
#define LEGACY_ADV_OPCODE_HIGH 0x200D // Highest opcode for legacy advertising commands
#define EXTENDED_ADV_OPCODE_LOW  0x2036 // Lowest opcode for extended advertising commands
#define EXTENDED_ADV_OPCODE_HIGH 0x204A // Highest opcode for extended advertising commands
#define HCI_LE_CREATE_CONNECTION_OPCODE                 0x200D
#define HCI_LE_EXTENDED_CREATE_CONNECTION_OPCODE        0x2043
#define HCI_LE_PERIODIC_ADVERTISING_CREATE_SYNC_OPCODE  0x2044

void transport_layer_init(void)
{
  /* Queue index init */
  fifo_init(&event_fifo, EVENT_BUFFER_SIZE, event_buffer, FIFO_ALIGNMENT);
  fifo_init(&command_fifo, COMMAND_BUFFER_SIZE, command_buffer, FIFO_ALIGNMENT);

  /* event_lost_register init */
  event_lost_register.event_lost = 0;
  event_lost_register.event_register[0] = 0x04;
  event_lost_register.event_register[1] = 0xFF;
  event_lost_register.event_register[2] = 0x0A;
  event_lost_register.event_register[3] = 0x02;
  event_lost_register.event_register[4] = 0x00;
  event_lost_register.event_lost_code = 0;

  HAL_UARTEx_ReceiveToIdle_DMA(&huart1, DMA_RX_Buffer, DMA_RX_BUFFER_SIZE);
}

static void transport_layer_send_data(uint8_t *data, uint16_t data_length)
{
  if (dma_state == DMA_IDLE) {
    dma_state = DMA_IN_PROGRESS;
    DEBUG_NOTES(DMA_REARM);
    HAL_UART_Transmit_DMA(&huart1, data, data_length);
  }
}

void transport_layer_tick(void)
{
  uint8_t buffer[COMMAND_BUFFER_SIZE], buffer_out[FIFO_VAR_LEN_ITEM_MAX_SIZE];
  uint16_t len;
  uint16_t size = 0;

  /* Event queue */
  if ((fifo_size(&event_fifo) > 0) && (dma_state == DMA_IDLE)) {
    uint8_t *ptr;
    DEBUG_NOTES(SEND_DATA);
    if (fifo_get_ptr_var_len_item(&event_fifo, &size, &ptr) == 0) {
      transport_layer_send_data(ptr+FIFO_ALIGNMENT, size);
    }
  }

  /* Command FIFO */
  if (fifo_size(&command_fifo) > 0) {
    uint16_t opcode;
    uint8_t offset;

    fifo_get_var_len_item(&command_fifo, &size, buffer);
    /*  */
    if(buffer[0] == HCI_COMMAND_PKT){
      hci_cmd_hdr *hdr = (hci_cmd_hdr *)buffer;
      opcode = hdr->opcode;
      offset = sizeof(hci_cmd_hdr);
    }
    else if(buffer[0] == HCI_COMMAND_EXT_PKT){
      hci_cmd_ext_hdr *hdr = (hci_cmd_ext_hdr *)buffer;
      opcode = hdr->opcode;
      offset = sizeof(hci_cmd_ext_hdr);
    }
    else {
      /* Unknown packet type */
      fifo_flush(&command_fifo);
      return;
    }

    if(opcode == HCI_RESET_OPCODE)
    {
      while(dma_state == DMA_IN_PROGRESS);
      while(LL_USART_IsActiveFlag_TXE_TXFNF(USART1) == RESET);
      while(LL_USART_IsActiveFlag_TC(USART1) == RESET);
      TL_ResetReqCallback();
    }

    len=process_command(opcode, buffer+offset, size-offset, buffer_out, sizeof(buffer_out));

#if (BUFFER_CMDS_ON_BUSY == 1)
    uint8_t status_offset = (buffer_out[1] == 0x0E) ? 6 : 3; /* 0x0E: command complete, 0x0F: command status */
    /* Apply command buffering in case of CONTROLLER BUSY error with the exception of the
     * aci_l2cap_connection_parameter_update_resp command (see  req_pbs #990070)
     */
    if ((*(buffer_out+status_offset) != BLE_ERROR_CONTROLLER_BUSY) || (opcode == 0xfd82))
    {
      DEBUG_NOTES(COMMAND_PROCESSED);
      /* Set user events back to normal queue */
      send_event(buffer_out, len, 1);
      fifo_flush(&command_fifo);
    }
    else
    {
      fifo_roll_back(&command_fifo, size);
    }
#else
    DEBUG_NOTES(COMMAND_PROCESSED);
    /* Set user events back to normal queue */
    send_event(buffer_out, len, 1);
    fifo_flush(&command_fifo);
#endif
  }

  if(event_lost_register.event_lost==1) {
    if (fifo_put_var_len_item(&event_fifo, 13, event_lost_register.event_register,0,NULL) == 0) {
      event_lost_register.event_lost = 0;
      event_lost_register.event_lost_code = 0;
    }
  }
}
