==> STMicroelectronics/STM32CubeWB0/Projects/NUCLEO-WB09KE/Applications/BLE/BLE_TransparentMode_SPI/STM32_BLE/App/transport_layer.c <==
#include "main.h"
#include "stm32wb0x.h"
#include "fifo.h"
#include "compiler.h"
#include "transport_layer.h"
#include "dtm_cmd_db.h"
#include "stm32wb0x_hal_dma.h"
#include "stm32wb0x_hal_uart.h"
#include "hci_parser.h"
#include "dtm_preprocess_events.h"
#include "app_common.h"
#include "app_ble.h"
#define MAX_EVENT_SIZE  (536)
#define COMMAND_BUFFER_SIZE  (536 + 4)
#define EVENT_BUFFER_SIZE    2300
#define COMMAND_BUFFER_SIZE  265        /* Decrease buffer size for reducing RAM footprint */
#define EVENT_BUFFER_SIZE    1024
#define FIFO_ALIGNMENT       4
#define FIFO_VAR_LEN_ITEM_MAX_SIZE (MAX_EVENT_SIZE)
#define DMA_CH_UART_TX          LL_DMA_CHANNEL_1
#define DMA_CH_UART_RX          LL_DMA_CHANNEL_2
#define HCI_RESET_OPCODE        0x0C03
#define LEGACY_ADV_OPCODE_LOW  0x2006 // Lowest opcode for legacy advertising commands
#define LEGACY_ADV_OPCODE_HIGH 0x200D // Highest opcode for legacy advertising commands
#define EXTENDED_ADV_OPCODE_LOW  0x2036 // Lowest opcode for extended advertising commands
#define EXTENDED_ADV_OPCODE_HIGH 0x204A // Highest opcode for extended advertising commands
#define HCI_LE_CREATE_CONNECTION_OPCODE                 0x200D
#define HCI_LE_EXTENDED_CREATE_CONNECTION_OPCODE        0x2043
#define HCI_LE_PERIODIC_ADVERTISING_CREATE_SYNC_OPCODE  0x2044
#define SPI_HEADER_LEN  (uint8_t)(4)    /* Indeed the header len is 5 due to load of dummy from FIFO */
#define SPI_CTRL_WRITE  (uint8_t)(0x0A)
#define SPI_CTRL_READ   (uint8_t)(0x0B)

void transport_layer_init(void)
{
  /* Queue index init */
  fifo_init(&event_fifo, EVENT_BUFFER_SIZE, event_buffer, FIFO_ALIGNMENT);
  fifo_init(&command_fifo, COMMAND_BUFFER_SIZE, command_buffer, FIFO_ALIGNMENT);

  /* event_lost_register init */
  event_lost_register.event_lost = 0;
  event_lost_register.event_register[0] = 0x04;
  event_lost_register.event_register[1] = 0xFF;
  event_lost_register.event_register[2] = 0x0A;
  event_lost_register.event_register[3] = 0x02;
  event_lost_register.event_register[4] = 0x00;
  event_lost_register.event_lost_code = 0;
  
  SPI_STATE_TRANSACTION(SPI_PROT_CONFIGURED_STATE);
}

static void transport_layer_send_data(uint8_t *data, uint16_t data_length)
{
  restore_flag = 1;
  
  
  event_fifo_header_restore[0] = data[0];
  event_fifo_header_restore[1] = data[1];
  event_fifo_header_restore[2] = data[2];
  event_fifo_header_restore[3] = data[3];
  
  command_fifo_dma_len = (command_fifo.max_size - fifo_size(&command_fifo));
  
  data[0] = (uint8_t)command_fifo_dma_len;
  data[1] = (uint8_t)(command_fifo_dma_len>>8);
  data[2] = (uint8_t)data_length;
  data[3] = (uint8_t)(data_length>>8);
  
  buff_dma[0] = 0xFF;
  memcpy(&buff_dma[1], data, data_length+SPI_HEADER_LEN);
  
  LL_SPI_ReceiveData16(SPI);
  LL_SPI_ReceiveData16(SPI);
  
  DEBUG_NOTES(SEND_DATA);
  
  DMA_Rearm(DMA_CH_SPI_RX, (uint32_t)command_fifo_buffer_tmp, command_fifo_dma_len);
  DMA_Rearm(DMA_CH_SPI_TX, (uint32_t)buff_dma, data_length+SPI_HEADER_LEN+1); 
}

void transport_layer_tick(void)
{
  uint8_t buffer[COMMAND_BUFFER_SIZE], buffer_out[FIFO_VAR_LEN_ITEM_MAX_SIZE];
  uint16_t len;
  uint16_t size = 0;
  uint32_t tick_start_val;  
  
  if(SPI_STATE_CHECK(SPI_PROT_CONFIGURED_HOST_REQ_STATE))
  {
    DEBUG_NOTES(PARSE_HOST_REQ);    
    transport_layer_receive_data();          
    LL_DMA_EnableChannel(DMA1, DMA_CH_SPI_RX);
    LL_DMA_EnableChannel(DMA1, DMA_CH_SPI_TX);
    SPI_STATE_TRANSACTION(SPI_PROT_WAITING_HEADER_STATE);
    /* Give authorization to send data. */
    LL_GPIO_SetOutputPin(IRQ_GPIO_Port, IRQ_Pin);
    DEBUG_NOTES(IRQ_RISE);
  }
  /* Event queue */
  else if ((fifo_size(&event_fifo) > 0) && (SPI_STATE_CHECK(SPI_PROT_CONFIGURED_STATE) || SPI_STATE_CHECK(SPI_PROT_SLEEP_STATE)))
  {
    uint8_t *ptr;
    if (fifo_get_ptr_var_len_item(&event_fifo, &size, &ptr) == 0) 
    {
      SPI_STATE_TRANSACTION(SPI_PROT_CONFIGURED_EVENT_PEND_STATE);      
      if (!header_timeout)
        transport_layer_send_data(ptr, size);
      header_timeout = 0;
      /* Signal data availability. */
      LL_GPIO_SetOutputPin(IRQ_GPIO_Port, IRQ_Pin);
      DEBUG_NOTES(IRQ_RISE);
    }
  }
  
  if(SPI_STATE_CHECK(SPI_PROT_WAITING_HEADER_STATE))
  {
    tick_start_val = HAL_GetTick();
  }
  
  while(SPI_STATE_CHECK(SPI_PROT_WAITING_HEADER_STATE))
  {    
    volatile uint16_t tmp_spi_dma_len = LL_DMA_GetDataLength(DMA1, DMA_CH_SPI_RX);
    tmp_spi_dma_len = (command_fifo_dma_len - tmp_spi_dma_len);
    
    if(tmp_spi_dma_len > 4)
    {
      SPI_STATE_TRANSACTION(SPI_PROT_WAITING_DATA_STATE);
      /* Host has begun to send data. Reset signal that we used to give authorization to send data. */
      LL_GPIO_ResetOutputPin(IRQ_GPIO_Port, IRQ_Pin);
      DEBUG_NOTES(IRQ_FALL);
      break;
    }
    /* Exit after 100 ms */
    uint32_t tick_val = HAL_GetTick();
    if( tick_val - tick_start_val > 100)
    {
      header_timeout = 1;
      DEBUG_NOTES(HEADER_NOT_RECEIVED);
      
      SPI_STATE_TRANSACTION(SPI_PROT_TRANS_COMPLETE_STATE);
      LL_GPIO_ResetOutputPin(IRQ_GPIO_Port, IRQ_Pin);    /* Release SPI communication request */
      DEBUG_NOTES(IRQ_FALL);
      
      if(restore_flag)
      {
        DEBUG_NOTES(ADVANCE_DMA_RESTORE);
        event_fifo.buffer[event_fifo.head] = event_fifo_header_restore[0];
        event_fifo.buffer[event_fifo.head+1] = event_fifo_header_restore[1];
        event_fifo.buffer[event_fifo.head+2] = event_fifo_header_restore[2];
        event_fifo.buffer[event_fifo.head+3] = event_fifo_header_restore[3];
      }
      SPI_STATE_TRANSACTION(SPI_PROT_CONFIGURED_STATE);  
      
      break;
    }
  }

  /* Command FIFO */
  if (fifo_size(&command_fifo) > 0)
  {
    uint16_t opcode;
    uint8_t offset;

    fifo_get_var_len_item(&command_fifo, &size, buffer);
    /*  */
    if(buffer[0] == HCI_COMMAND_PKT)
    {
      hci_cmd_hdr *hdr = (hci_cmd_hdr *)buffer;
      opcode = hdr->opcode;
      offset = sizeof(hci_cmd_hdr);
    }
    else if(buffer[0] == HCI_COMMAND_EXT_PKT)
    {
      hci_cmd_ext_hdr *hdr = (hci_cmd_ext_hdr *)buffer;
      opcode = hdr->opcode;
      offset = sizeof(hci_cmd_ext_hdr);
    }
    else 
    {
      /* Unknown packet type */
      fifo_flush(&command_fifo);
      return;
    }

    if(opcode == HCI_RESET_OPCODE)
    {
      TL_ResetReqCallback();
    }

    len=process_command(opcode, buffer+offset, size-offset, buffer_out, sizeof(buffer_out));

#if (BUFFER_CMDS_ON_BUSY == 1)
    uint8_t status_offset = (buffer_out[1] == 0x0E) ? 6 : 3; /* 0x0E: command complete, 0x0F: command status */
    /* Apply command buffering in case of CONTROLLER BUSY error with the exception of the
     * aci_l2cap_connection_parameter_update_resp command (see  req_pbs #990070)
     */
    if ((*(buffer_out+status_offset) != BLE_ERROR_CONTROLLER_BUSY) || (opcode == 0xfd82))
    {
      DEBUG_NOTES(COMMAND_PROCESSED);
      /* Set user events back to normal queue */
      send_event(buffer_out, len, 1);
      fifo_flush(&command_fifo);
    }
    else
    {
      fifo_roll_back(&command_fifo, size);
    }
#else
    DEBUG_NOTES(COMMAND_PROCESSED);
    /* Set user events back to normal queue */
    send_event(buffer_out, len, 1);
    fifo_flush(&command_fifo);
#endif
    
    BLEStack_Process_Schedule();
  }

  if(event_lost_register.event_lost==1) 
  {
    if (fifo_put_var_len_item(&event_fifo, 13, event_lost_register.event_register,0,NULL) == 0) 
    {
      event_lost_register.event_lost = 0;
      event_lost_register.event_lost_code = 0;
    }
  }
  
}
